--- a/Xiao/keyPassthrough/platformio.ini
+++ b/Xiao/keyPassthrough/platformio.ini
@@ -13,7 +13,5 @@ platform = atmelsam
 board = seeed_xiao
 framework = arduino
 lib_deps = 
-	; adafruit/Adafruit TinyUSB Library@^0.10.5
 	arduino-libraries/Keyboard@^1.0.3
-; build_flags = 
-; 	-DUSE_TINYUSB
+	arduino-libraries/Mouse@^1.0.1
